# Blank_Business_Builder

./: .coverage  .coveragerc  .env.production  API_ENDPOINTS_COMPLETE.md  BBB_PRODUCTION_READY_FINAL_REPORT.md  BBB_SECURITY_SUITE_COMPLETE.md  BBB_TEST_SUCCESS_REPORT.md  DEPLOYMENT_READINESS_VERIFICATION.md  Dockerfile.production  IMPLEMENTATION_COMPLETE_SUMMARY.md  PHASE_2_ISOLATION_FIX_PROGRESS.md  PRODUCTION_DEPLOYMENT_GUIDE.md  PRODUCTION_READY_SUMMARY.md  PRODUCTION_STATUS_SUMMARY.txt  START_HERE_PRODUCTION.md  TEST_FIXING_PLAN.md  TEST_FIX_COMPLETE_SUMMARY.md  TEST_FIX_DASHBOARD.html  TEST_ISOLATION_FIX_SUCCESS.md  TEST_PROGRESS_SUMMARY.md  TEST_SOLUTION_FINAL.md  TEST_STATUS_ACCURATE.md  bbb-client-portal.html  bbb-website-Dockerfile  bbb-website-gitignore.txt  bbb-website-nginx.conf  bbb_complete_features.py  cleanup_test_files.py  corrected_quantum_enhanced_bbb_results_20251019_172020.json  docker-compose.production.yml  gavl_quantum_reasoning_stack.py  gavl_quantum_results_20251019_171221.json  load_test.py  pyproject.toml  pytest.ini  quantum_enhanced_bbb.py  quantum_enhanced_bbb_corrected.py  quantum_enhanced_bbb_results_20251019_171900.json  quantum_zero_touch_optimizer.py  quantum_zero_touch_results_20251019_165944.json  (+2 more)
backups/: backup_20251019_031254_0.backup  backup_20251019_031255_0.backup  backup_20251019_031255_1.backup  backup_20251019_031255_2.backup  backup_20251019_031255_3.backup  backup_20251019_031255_4.backup  backup_20251019_031255_5.backup  backup_20251019_031255_6.backup  backup_20251019_031255_7.backup  backup_20251019_031255_8.backup  (+137 more)
(+45 files in other folders)
